--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://raul:raul@cluster0.inn1qsw.mongodb.net/test"
+DATABASE_URL="mongodb+srv://raul:qc133vUPxcRoFmG7@cluster0.inn1qsw.mongodb.net/test"
 NEXTAUTH_JWT_SECRET="NEXT-JWT-SECRET"
 NEXTAUTH_SECRET="NEXT-SECRET"
 
